--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,20 +15,23 @@
   </div>
 
   <div class="row">
-    <ul class="news-list">
-
-      <div style="visibility: hidden;"></div>
-
-      <li *ngFor="let newsItem of getArray()" class="news">
-        <h3 class="news__header">
-          {{newsItem.newsTitle}}
+    <ul class="news-list" *ngFor="let newsItem of getArray()">
+      <li class="news">
+        <h3 class="news__subject">
+          {{newsItem.subject}}
         </h3>
 
         <main class="news__content">
           {{newsItem.content}}
         </main>
 
-        <img src="{{newsItem.imageLink}}" alt="" class="news__image">
+        <div class="news__author author">
+          <div class="author__photo-cropper">
+            <img src="{{newsItem.person.imageUrl}}" alt="" class="author__photo">
+          </div>
+
+          <p class="author__name">{{newsItem.person.fullName}}</p>
+        </div>
       </li>
     </ul>
   </div>
