Included FormModule to modules, used ngModel to have selected option-s key, diplayed the key before select-label temporarily

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,9 @@
 
     <div class="row">
       <form name="searchForm">
-        <label for="optionsSelect"> Filter by: </label><br>
-        <select id="optionsSelect" name="singleSelect" ng-model="data.singleSelect">
+        <label for="optionsSelect"> Filter by: </label>
+        <p> {{selectedOption}} </p>
+        <select id="optionsSelect" name="optionsToFilter" [(ngModel)]="selectedOption">
           <option *ngFor="let selectOption of selectOptions" value="{{selectOption.key}}">{{selectOption.value}}</option>
         </select>
 
