Used one of the Pipes (UppercasePipe) to format subject string directly in template

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,5 +1,5 @@
 <h3 class="news__subject">
-  {{iteratedNews.subject}}
+  {{iteratedNews.subject | uppercase}}
 </h3>
 
 <main class="news__content">
