Temp commit: made communication between parent(main) and child(select) components with Output decorator and EventEmitter to bind parent on selection events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,7 @@
 
     <div class="row">
       <form name="searchForm">
-        <app-search-selection></app-search-selection>
-
+        <app-search-selection (selection)="tempPrintEvent($event)"></app-search-selection>
         <input type="text" class="search-news-input" id="search-news" (input)="searchNews($event)" placeholder="search">
       </form>
     </div>
