--- a/src/app/search-selection/search-selection.component.html
+++ b/src/app/search-selection/search-selection.component.html
@@ -1,5 +1,6 @@
 <label for="optionsSelect"> Filter by: </label>
 
+<!-- Later add default option onInit -->
 <select id="optionsSelect" name="optionsToFilter" [(ngModel)]="selectedOption" (ngModelChange)="printSelectedOption()">
   <option *ngFor="let selection of selectOptions" [ngValue]="selection">{{selection.value}}</option>
 </select>
