Added template navigation to user-profile, without passing params. works)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
     </h1>
   </div>
 
+  <router-outlet></router-outlet> <!-- SHOULD I USE IT HERE&?!?!?!? -->
+
   <div class="row">
     <h2 class="title-for-search">{{ titleForSearch }}</h2>
 
