--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -11,5 +11,5 @@
     <img src="{{iteratedNews.person.imageUrl}}" alt="" class="author__photo">
   </div>
 
-  <p class="author__name">{{iteratedNews.person.fullName}}</p>
+  <a routerLink="/profile" routerLinkActive="author__name_active" class="author__name">{{iteratedNews.person.fullName}}</a>
 </div>
