--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,3 +1,22 @@
-<p>
-  news-list works!
-</p>
+<div class="row">
+  <h2 class="title-for-search">{{ titleForSearch }}</h2>
+
+  <div class="row">
+    <form name="searchForm">
+      <app-search-selection (selection)="handleFilterOption($event)"></app-search-selection>
+      <input type="text" class="search-news-input" id="search-news" (input)="searchNews($event)" placeholder="search">
+    </form>
+  </div>
+</div>
+
+<div class="row">
+  <h2 class="title-before-mews">{{ textBeforeNews }}</h2>
+</div>
+
+<div class="row">
+  <ul class="news-list" *ngFor="let newsItem of getArray()">
+    <li class="news">
+      <app-news [iteratedNews]="newsItem"></app-news>
+    </li>
+  </ul>
+</div>
