--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
     </h1>
   </div>
 
-  <router-outlet></router-outlet> <!-- SHOULD I USE IT HERE&?!?!?!? -->
+  <router-outlet></router-outlet>
 </div>
