Useed news service in user profile component to retrieve data with filtration by user id. Added userID field to news (as a basic referense). Added markup for user component template

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,3 +1,16 @@
-<p>
-  user-profile works!
-</p>
+<main class="user-profile">
+  <h3>{{ getUserName()}}</h3>
+
+  <div class="user-profile__photo-wrapper">
+    <img src="{{ getUserPhoto() }}" alt="" class="user-profile__photo">
+  </div>
+</main>
+
+<ul class="user__posts" *ngFor="let post of getUserPosts()">
+  <li class="user-post">
+    <h4 class="user-post__subject">{{ post.subject }}</h4>
+
+    <main class="user-post__content">{{ post.content }}</main>
+  </li>
+</ul>
+
