--- a/src/app/news/news-item/news-item.component.html
+++ b/src/app/news/news-item/news-item.component.html
@@ -11,5 +11,5 @@
     <img src="{{iteratedNews.person.imageUrl}}" alt="" class="author__photo">
   </div>
 
-  <a routerLink="/profile" routerLinkActive="author__name_active" class="author__name">{{iteratedNews.person.fullName}}</a>
+  <a [routerLink]="['/profile', iteratedNews.userId]" routerLinkActive="author__name_active" class="author__name">{{iteratedNews.person.fullName}}</a>
 </div>
