Added simple navigation back to news post list

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -16,3 +16,10 @@
   </ul>
 </div>
 
+<nav class="navigation">
+  <ul>
+    <li class="navigation-back">
+      <button class="navigation-back-button" (click)="gotoNewsList()">Back to news</button>
+    </li>
+  </ul>
+</nav>
