--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,9 @@
     </h1>
   </div>
 
+  <button class="user-profile-link"  [routerLink]="['profile/1']">
+    <span class="user-icon-link fas fa-user"></span>
+  </button>
+
   <router-outlet></router-outlet>
 </div>
