Temporary remove hardcoded active user id because of not params passing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </h1>
   </div>
 
-  <button class="user-profile-link"  [routerLink]="['profile/1']">
+  <button class="user-profile-link"  [routerLink]="['profile/1']"> <!-- temp uri -->
     <span class="user-icon-link fas fa-user"></span>
   </button>
 
