--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -25,7 +25,4 @@
   </ul>
 </nav>
 
-
-<button (click)="showDialog = !showDialog">Edit profile</button>
-
-<app-edit-profile-window [(visible)]="showDialog"></app-edit-profile-window>
+<app-edit-profile-window></app-edit-profile-window>
