--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,21 @@
-<p>
-  login works!
-</p>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+  <div class="form-group">
+    <label>Email</label>
+    <input type="email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.email.errors }" />
+    <div *ngIf="submitted && form.email.errors" class="invalid-feedback">
+      <div *ngIf="form.email.errors.required">Email is required</div>
+      <div *ngIf="form.email.errors.email">Email must be a valid email address</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Password</label>
+    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
+    <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
+      <div *ngIf="form.password.errors.required">Password is required</div>
+      <!--<div *ngIf="form.password.errors.minlength">Password must be at least 6 characters</div>-->
+    </div>
+  </div>
+  <div class="form-group">
+    <button class="btn btn-primary">Log in</button>
+  </div>
+</form>
