--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
+    <input type="password" formControlName="password" class="form-control" validateEqual="password_confirmation" reverse="true" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
     <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
       <div *ngIf="form.password.errors.required">Password is required</div>
       <!--<div *ngIf="form.password.errors.minlength">Password must be at least 6 characters</div>-->
@@ -31,10 +31,12 @@
   </div>
   <div class="form-group">
     <label>Confirm password</label>
-    <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password_confirmation.errors }" />
+    <input type="password" formControlName="password_confirmation" class="form-control" validateEqual="password" [ngClass]="{ 'is-invalid': submitted && form.password_confirmation.errors }" />
     <div *ngIf="submitted && form.password_confirmation.errors" class="invalid-feedback">
       <div *ngIf="form.password_confirmation.errors.required">Password is required</div>
-      <!--<div *ngIf="form.password_confirmation.errors.minlength">Password must be at least 6 characters</div>-->
+      <!--&lt;!&ndash;<div *ngIf="form.password_confirmation.errors.minlength">Password must be at least 6 characters</div>&ndash;&gt;-->
+      <!--<div *ngIf="form.password_confirmation.errors?.ConfirmPasswordValidationDirective">Passwords do not match</div>-->
+      <div *ngIf="form.password_confirmation.pristine && submitted">Password mismatch</div>
     </div>
   </div>
   <div class="form-group">
