--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,16 +1,23 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()">
   <div class="form-group">
     <label>First name</label>
-    <input type="email" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.first_name.errors }" />
+    <input type="text" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.first_name.errors }" />
     <div *ngIf="submitted && form.first_name.errors" class="invalid-feedback">
       <div *ngIf="form.first_name.errors.required">Empty first name field</div>
     </div>
   </div>
   <div class="form-group">
     <label>Second name</label>
-    <input type="email" formControlName="second_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.second_name.errors }" />
+    <input type="text" formControlName="second_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.second_name.errors }" />
     <div *ngIf="submitted && form.second_name.errors" class="invalid-feedback">
       <div *ngIf="form.second_name.errors.required">Empty second name field</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Photo URL</label>
+    <input type="text" formControlName="photo" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.photo.errors }" />
+    <div *ngIf="submitted && form.second_name.errors" class="invalid-feedback">
+      <div *ngIf="form.second_name.errors.required">Photo is required</div>
     </div>
   </div>
   <div class="form-group">
@@ -23,7 +30,7 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" formControlName="password" class="form-control" validateEqual="password_confirmation" reverse="true" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
+    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
     <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
       <div *ngIf="form.password.errors.required">Password is required</div>
       <!--<div *ngIf="form.password.errors.minlength">Password must be at least 6 characters</div>-->
@@ -31,7 +38,7 @@
   </div>
   <div class="form-group">
     <label>Confirm password</label>
-    <input type="password" formControlName="password_confirmation" class="form-control" validateEqual="password" [ngClass]="{ 'is-invalid': submitted && form.password_confirmation.errors }" />
+    <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password_confirmation.errors }" />
     <div *ngIf="submitted && form.password_confirmation.errors" class="invalid-feedback">
       <div *ngIf="form.password_confirmation.errors.required">Password is required</div>
       <!--&lt;!&ndash;<div *ngIf="form.password_confirmation.errors.minlength">Password must be at least 6 characters</div>&ndash;&gt;-->
