Added store-cookies functionality, but get 401 error and token->undefined

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -24,4 +24,6 @@
   </ul>
 </nav>
 
-<app-edit-profile-window></app-edit-profile-window>
+<div class="edit-wrapper" *ngIf="isCurrnetUserLogged()">
+  <app-edit-profile-window></app-edit-profile-window>
+</div>
