--- a/src/app/user/edit-profile-window/edit-profile-window.component.html
+++ b/src/app/user/edit-profile-window/edit-profile-window.component.html
@@ -7,50 +7,25 @@
   </div>
 
   <div class="modal-body">
-    <!--<p class="edit-profile_first-name">First Name:-->
-    <!--<input type="text" [(ngModel)]="user_first_name"> {{user_first_name}}-->
-    <!--</p>-->
+    <p class="edit-profile_first-name">First Name:
+      <input type="text" [(ngModel)]="user_first_name"> {{user_first_name}}
+    </p>
 
+    <p class="edit-profile_second-name">Second Name:
+      <input type="text" [(ngModel)]="user_second_name"> {{user_second_name}}
+    </p>
 
-    <!--<p class="edit-profile_second-name">Second Name:</p>-->
-    <!--<input type="text" [(ngModel)]="user_second_name">-->
+    <p class="edit-profile_email">Email:
+      <input type="email" [(ngModel)]="user_email"> {{user_email}}
+    </p>
 
-    <!--<p class="edit-profile_email">Email:</p>-->
-    <!--<input type="email" [(ngModel)]="user_email">-->
+    <p class="edit-profile__password">Password:
+      <input type="password" [(ngModel)]="user_password"> {{user_password}}
+    </p>
 
-    <!--<p class="edit-profile__password">Password:</p>-->
-    <!--<input type="password" [(ngModel)]="user_password">-->
-
-    <!--<p class="edit-profile__password">Password Confirmation:</p>-->
-    <!--<input type="password" [(ngModel)]="user_password_confirmation">-->
-
-    <!--<button (click)="closeModal('edit-profile-modal');">Save</button>-->
-
-
-    <!-- FOR TEMP MOCK DATA -->
-    <!--<p class="edit-profile_first-name">First Name:-->
-      <!--<input type="text" [(ngModel)]="user_id"> {{user_id}}-->
-    <!--</p>-->
-
-    <!--<p class="edit-profile__password">Password Confirmation:-->
-      <!--<input type="password" [(ngModel)]="user_name"> {{user_name}}-->
-    <!--</p>-->
-
-    <!--<p class="edit-profile__password">Image URL:-->
-      <!--<input type="password" [(ngModel)]="user_photo"> {{user_photo}}-->
-    <!--</p>-->
-
-    <!--<p class="edit-profile_second-name">Second Name:-->
-      <!--<input type="text" [(ngModel)]="user_fullName"> {{user_fullName}}-->
-    <!--</p>-->
-
-    <!--<p class="edit-profile_email">Email:-->
-      <!--<input type="email" [(ngModel)]="user_email"> {{user_email}}-->
-    <!--</p>-->
-
-    <!--<p class="edit-profile__password">Password:-->
-      <!--<input type="password" [(ngModel)]="user_password"> {{user_password}}-->
-    <!--</p>-->
+    <p class="edit-profile__password">Password Confirmation:
+      <input type="password" [(ngModel)]="user_password_confirmation"> {{user_password_confirmation}}
+    </p>
   </div>
 
   <div class="modal-footer">
