Temp commit. Fixed login, partiallly edit profile. Backend-> send id on logged-in route, not others

--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,3 +1,7 @@
+<header class="navigation">
+  <button clacc='logout-button' (click)='logOut()'>Log out</button>
+</header>
+
 <main class="user-profile">
   <h3>{{ userNameFull }}</h3>
 
