Fixed edit profile, use event emitter to signalize the user profilecomponent that data was change. To see the data changed the reloading deeded

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
 <div class="container">
   <!-- <app-navigation></app-navigation> -->
-
-  <div class="row">
-    <h1 class="main-title">
-      {{ title }}
-    </h1>
-  </div>
-
-  <button class="user-profile-link"  [routerLink]="['profile/1']"> <!-- temp uri -->
+  <button class="user-profile-link" (click)="goToUserProfile()">
     <span class="user-icon-link fas fa-user"></span>
   </button>
 
