Created component for modal to edit news, temporary added common button not tied to edit button. Implemented service with Subject to manipulat with chosen post. Problem - when main component UserProfile initialized, there appear a module absolutely blank althouth the markup of inner component is present. Fix later to call modal on edit button clicking

--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -14,8 +14,16 @@
     <ul class="user__posts" *ngFor="let post of userPosts">
       <li class="user-post">
         <h4 class="user-post__subject">{{ post.subject }}</h4>
-
         <main class="user-post__content">{{ post.content }}</main>
+
+        <div class="d-flex w-100 justify-content-between">
+          <button #addPost class="" (click)="editPost(post)">
+            <i title="Edit" class="fas fa-edit" aria-hidden="true"></i>
+          </button>
+          <button #deletePost class="" (click)="deletePost(post)">
+            <i title="Delete" class="fas fa-trash-alt" aria-hidden="true"></i>
+          </button>
+        </div>
       </li>
     </ul>
   </div>
@@ -28,6 +36,10 @@
   </ul>
 </nav>
 
-<div class="edit-wrapper" *ngIf="isCurrnetUserLogged()">
+<div class="edit-posts-wrapper" *ngIf="isCurrnetUserLogged()">
+  <app-update-posts-window></app-update-posts-window>
+</div>
+
+<div class="edit-profile-wrapper" *ngIf="isCurrnetUserLogged()">
   <app-edit-profile-window (userChanged)="handleUserChanged($event)"></app-edit-profile-window>
 </div>
